# rum-analysis

./: .gitignore  LICENSE  README.md  dashboard.py  data_analysis.ipynb  pyproject.toml
assets/: merged_popularity.csv  styles.css
data/: Scraper.py  dataset.csv  merge_tbl.py  preprocessed.csv  price.csv  price_data.py  rum_data.py  tableau_process
data/dataset/: preprocessed.csv
data/preprocess/: data_analysis.ipynb  merge_data.ipynb  plot_playground.ipynb
pages/: brand.py  distribution.py  index.py  relationship.py
