[tool.poetry]
name = "rum"
version = "0.1.0"
description = ""
authors = ["Yinan Zhou <yinan.a.zhou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.17.2"
pandas = "^2.0.3"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
